--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-# API Backend URL
-VITE_API_URL=http://localhost:3000
+# API Backend URL (FastAPI en docker-compose expone :8000)
+VITE_API_URL=http://localhost:8000
